src/nav.css
nav {
    background-color: slategray;
    width: 100%;
    height: 100px;
    margin-top: -2%;
    }

nav ul {
    margin-right: 2%;
    }

nav li {
    display: block;
    float: right;
    margin-top: 3%;
    padding-left: 10px;
    }
  
nav .navTitle {
    display: block;
    float: left;
    font-size: 40px;
    margin-left: 5%;
    margin-top: 2%;
    color: whitesmoke;
    }


.link, .link a {
    color: whitesmoke;
    text-decoration: underline;
}

.link:visited, .link a:visited {
    color: whitesmoke;
    text-decoration: underline;
}

.link:hover, .link a:hover {
    color: whitesmoke;
    text-decoration: underline;
}

.link:active, .link a:active {
    color: whitesmoke;
    text-decoration: underline;
}

.origDPEBox {
    height: 200px;
}

.origDPE {
    width: 100%;
    transform: rotate(-90deg);
    padding-top: 90px;
    padding-bottom: 100px;
}


.modalForm {
    text-align: center;
    }

.joinCrew {
    margin-left: 18%;
}

.modal { /*https://www.webdesignerdepot.com/2012/10/creating-a-modal-window-with-html5-and-css3/*/
    position: fixed;
    top:  0;
    right: 0;
    bottom: 0;
    left: 0;
    background: rgba(0,0,0,0.8);
    z-index: 99999;
    opacity: 0;
    transition: opacity 400ms ease-in;
    pointer-events: none;
    overflow: scroll;
  
  }
  
  .modalContent:target{
    opacity: 1;
    pointer-events: auto;
  }
  
  .modalContent > div {
    width: 400px;
    height: 130%;
    position: relative;
    margin: 10% auto;
    padding: 5px 20px 13px 20px;
    border-radius: 10px;
    background: lightslategray;
    text-align: left;
  }
  
  
  .close {
    background: #606061;
      color: #FFFFFF;
      line-height: 25px;
      position: absolute;
      right: -12px;
      text-align: center;
      top: -10px;
      width: 24px;
      text-decoration: none;
      font-weight: bold;
      border-radius: 12px;
      box-shadow: 1px 1px 3px #000;
  }
  
  .close:hover  { 
    background: lightslategray;
  }
  
  .modal h2{
    text-align: center;
    font-size: 24px;
  }
  
  


@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {

    nav {
        background-color: grey;
        width: 100%;
        height: 100px;
        margin-top: -4%;
        }
    
    nav li {
        display: block;
        float: right;
        margin-top: -4%;
        padding-left: 10px;
        }
        
    nav .navTitle {
        display: block;
        float: left;
        font-size: 40px;
        margin-left: 10%;
        margin-top: 3%;
        color: whitesmoke;
        }

    .modalContent > div {
        width: 80%;
    }

    .joinCrew {
        margin-left: 10%;
    }

    .origDPE {
        width: 100%;
        transform: rotate(-90deg);
        padding-top: 90px;
        padding-bottom: 100px;
        
    }

}


.hidden {
    visibility: hidden;
  }
  
  .show {
    visibility: visible;
  }

